--- a/aboutme/wwr/styles/site-plan-rafting.css
+++ b/aboutme/wwr/styles/site-plan-rafting.css
@@ -20,7 +20,7 @@ Fonts are separated by a & */
   --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #000000  ;
+  --paragraph-background-color: #21c6f0  ;
   --nav-link-color: #396E94;
   --nav-background-color: #D4AC0D;
   --nav-hover-link-color: white;
