--- a/aboutme/wwr/styles/styles.css
+++ b/aboutme/wwr/styles/styles.css
@@ -31,7 +31,7 @@ footer p a {
 .book {
     text-align: center;
 }
-div {
+div .button-box{
     text-align: center; 
 }
 #hero-msg a{
@@ -50,6 +50,9 @@ div {
 footer  {
     background-color: #6f7364;
     color: #c6b4a4;
+}
+div .social a {
+    text-align: left; 
 }
    
     
