--- a/aboutme/wwr/styles/styles.css
+++ b/aboutme/wwr/styles/styles.css
@@ -40,6 +40,7 @@ div .button-box{
 .msg .join{
     background-color: #c6b4a4;
     color: black;
+    text-decoration: none; 
 }
 .logo{
     width: 80px;
@@ -56,4 +57,11 @@ div .social a {
 }
 nav a{
     color: white;
+    text-decoration: none; 
 } 
+.icon{
+    height: 80px;
+}
+div a{
+    text-decoration: none;
+}
