--- a/aboutme/wwr/styles/styles1.css
+++ b/aboutme/wwr/styles/styles1.css
@@ -1,24 +1,42 @@
-footer {
-    background-color: steelblue;
-    color: white;
+img{
+    width: 100%;
+    text-align: center;
 }
-footer p {
-    padding: 25px;
+div .uno1{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    padding: 50px;
+    margin: 100px;
+    border-color: black;
+    border-style: solid;
+    border-width: 20px
 }
-h1 {
-    margin: 50px 0;
+div .dos2{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    padding: 50px;
+    margin: 100px auto;
+    border-color: black;
+    
+    border-style: solid;
+    border-width: 20px;
 }
-nav {
-    background-color: steelblue;
-    padding: 25px;
+div .tres3{
+    width: 250px;
+    height: 250px;
+    border-color: black;
+    border-radius: 50%;
+    padding: 50px;
+    margin: 100px;
+    border-color: black;
+    border-style: solid;
+    border-width: 20px
 }
-a {
-    color: white;
-    padding: 25px;
-}
-body {
-    margin: 0
-}
-img {
-    border: 4px solid steelblue;
+div{
+    width: 100%;
+    height: 600px;
+    background: rgb(117, 113, 113);
+    text-align: center;
 }
