--- a/aboutme/wwr/styles/styles.css
+++ b/aboutme/wwr/styles/styles.css
@@ -1,4 +1,14 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
+body {
+    background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
+}
 #background {
     height: 725px;
 }
@@ -16,6 +26,8 @@ header {
     background-color: #6f7364;
     text-align: center;
     color: white;
+    line-height: 1.5em;
+    padding: 15px 30px;
 }
 msg a:link  {
     background-color:#c6b4a4;
@@ -27,9 +39,12 @@ footer p a {
 } 
 .home-grid  {
     text-align: center;
+    margin-top: 50px;
 }
-.book {
+.book, .join {
     text-align: center;
+    padding: 15px 30px;
+    
 }
 div .button-box{
     text-align: center; 
@@ -41,6 +56,7 @@ div .button-box{
     background-color: #c6b4a4;
     color: black;
     text-decoration: none; 
+    
 }
 .logo{
     width: 80px;
@@ -51,17 +67,34 @@ div .button-box{
 footer  {
     background-color: #6f7364;
     color: #c6b4a4;
+    margin-top: 200px;
 }
 div .social a {
     text-align: left; 
 }
 nav a{
     color: white;
-    text-decoration: none; 
+    text-decoration: none;
+    padding: 35px; 
 } 
 .icon{
     height: 80px;
 }
 div a{
     text-decoration: none;
+}
+.home-title{
+    font-family: 'Lato', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    color: #f3decb;
+    margin-top: 10px;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}   
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
 }
