--- a/positionstyles.css
+++ b/positionstyles.css
@@ -162,7 +162,7 @@
   grid-column: 1/2;
   grid-row: 2/3;
   float: right;
-  z-index: 1;  /* Aqui es donde me bloqueo */
+  /*z-index: 1;   Aqui es donde me bloqueo */
   
 } 
 .yellow5 {
