--- a/positionstyles.css
+++ b/positionstyles.css
@@ -161,8 +161,8 @@
   background-color: green; 
   grid-column: 1/2;
   grid-row: 2/3;
-  float: right;
-  /*z-index: 1;   Aqui es donde me bloqueo */
+  /*float: right;
+  z-index: 1;   Aqui es donde me bloqueo */
   
 } 
 .yellow5 {
