--- a/positionstyles.css
+++ b/positionstyles.css
@@ -161,8 +161,8 @@
   background-color: green; 
   grid-column: 1/2;
   grid-row: 2/3;
-  /*float: right;
-  z-index: 1;   Aqui es donde me bloqueo */
+  float: left;
+  /*z-index: 1;   Aqui es donde me bloqueo */
   
 } 
 .yellow5 {
@@ -171,8 +171,7 @@
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/5;
-  float: unset;
-  float: left;
+  float: text;
   
 } 
 .blue5 {
