--- a/positionstyles.css
+++ b/positionstyles.css
@@ -162,8 +162,9 @@
   grid-column: 1/2;
   grid-row: 2/3;
   float: left;
+  position: relative;
 }
- 
+
 .yellow5 {
   width: 100%; 
   height: 240px; 
