--- a/positionstyles.css
+++ b/positionstyles.css
@@ -163,7 +163,8 @@
   grid-column: 1/2;
   grid-row: 2/4;
   float: left;
-    
+  z-index: 1;
+  
 }
 
 .yellow5 {
@@ -172,7 +173,8 @@
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/5;
-  
+  text-align: left;
+
 } 
 
 .blue5 {
