--- a/positionstyles.css
+++ b/positionstyles.css
@@ -173,7 +173,7 @@
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/5;
-  text-align: left;
+  text-align: right;
   float: text;
 } 
 
