--- a/positionstyles.css
+++ b/positionstyles.css
@@ -157,8 +157,8 @@
   grid-row: 1/2;
 } 
 .green5 { 
-  width: 160px; 
-  height: 160px; 
+  width: 30%; 
+  height: 55%; 
   background-color: green; 
   grid-column: 1/2;
   grid-row: 2/4;
@@ -167,7 +167,7 @@
 
 .yellow5 {
   width: 100%; 
-  height: 240px; 
+  height: 100%; 
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/5;
