--- a/positionstyles.css
+++ b/positionstyles.css
@@ -145,7 +145,7 @@
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
   display: grid;
-  grid-column: repeat(3, 100px) ;
+  grid-column: repeat(3, 1fr) ;
   grid-row: repeat(5, 80px);
   
 }
