--- a/positionstyles.css
+++ b/positionstyles.css
@@ -151,7 +151,7 @@
 }
 .red5 { 
   width: 100%; 
-  height: 80px; 
+  height: 100%; 
   background-color: red; 
   grid-column: 1/4;
   grid-row: 1/2;
@@ -176,7 +176,7 @@
 
 .blue5 {
   width: 100%; 
-  height: 80px; 
+  height: 100%; 
   background-color: blue; 
   grid-column: 1/4;
   grid-row: 5/6;
