--- a/positionstyles.css
+++ b/positionstyles.css
@@ -145,8 +145,8 @@
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
   display: grid;
-  grid-column: repeat(3, 1fr) ;
-  grid-row: repeat(5, 80px);
+  grid-column: 1fr, 1fr, 1fr ;
+  grid-row:  80px, 80px, 80px, 80px, 80px;
   
 }
 .red5 { 
