--- a/positionstyles.css
+++ b/positionstyles.css
@@ -151,32 +151,32 @@
 }
 .red5 { 
   width: 100%; 
-  height: 100%; 
+  height: 80px; 
   background-color: red; 
   grid-column: 1/4;
   grid-row: 1/2;
 } 
 .green5 { 
-  width: 30%; 
-  height: 55%; 
+  width: 100px; 
+  height: 80px; 
   background-color: green; 
   grid-column: 1/2;
-  grid-row: 2/4;
+  grid-row: 2/3;
   float: left;
+  z-index: 1;
 }
 
 .yellow5 {
   width: 100%; 
-  height: 100%; 
+  height: 160px; 
   background-color: gold; 
   grid-column: 1/4;
-  grid-row: 2/5;
-    
+  grid-row: 2/4;
 } 
 
 .blue5 {
   width: 100%; 
-  height: 100%; 
+  height: 80px; 
   background-color: blue; 
   grid-column: 1/4;
   grid-row: 5/6;
