--- a/positionstyles.css
+++ b/positionstyles.css
@@ -146,29 +146,29 @@
   height: 400px;
   display: grid;
   grid-column: 1fr, 1fr, 1fr ;
-  grid-row:  80px, 80px, 80px, 80px, 80px;
+  grid-row:  80px, 80px, 80px, 80px, 80px; 
   
 }
 .red5 { 
   width: 100%; 
-  height: 80px; 
+  height: 30; 
   background-color: red; 
   grid-column: 1/4;
   grid-row: 1/2;
 } 
 .green5 { 
-  width: 100px; 
-  height: 80px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
   grid-column: 1/2;
-  grid-row: 2/3;
+  grid-row: 2/4;
   float: left;
-  z-index: 1;
+  /*z-index: 1;*/
 }
 
 .yellow5 {
   width: 100%; 
-  height: 160px; 
+  height: 100%; 
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/4;
@@ -176,7 +176,7 @@
 
 .blue5 {
   width: 100%; 
-  height: 80px; 
+  height: 100%; 
   background-color: blue; 
   grid-column: 1/4;
   grid-row: 5/6;
