--- a/positionstyles.css
+++ b/positionstyles.css
@@ -151,20 +151,20 @@
 }
 .red5 { 
   width: 100%; 
-  height: 30; 
+  height: 100%; 
   background-color: red; 
   grid-column: 1/4;
   grid-row: 1/2;
 } 
 .green5 { 
-  width: 100%; 
+  width: 100px; 
   height: 100%; 
   background-color: green; 
   grid-column: 1/2;
   grid-row: 2/4;
   float: left;
-  /*z-index: 1;*/
-  opacity: 1;
+  z-index: 1;
+
 }
 
 .yellow5 {
@@ -172,15 +172,17 @@
   height: 100%; 
   background-color: gold; 
   grid-column: 1/4;
-  grid-row: 2/4;
+  grid-row: 2/5;
+  float: left;
 } 
 
 .blue5 {
   width: 100%; 
-  height: 100%; 
+  height:100%; 
   background-color: blue; 
   grid-column: 1/4;
   grid-row: 5/6;
+  
 } 
 
 
