--- a/positionstyles.css
+++ b/positionstyles.css
@@ -149,7 +149,7 @@
   grid-row:  80px, 80px, 80px, 80px, 80px; 
   
 }
-.red5 { 
+.red5 {
   width: 100%; 
   height: 100%; 
   background-color: red; 
@@ -162,8 +162,9 @@
   background-color: green; 
   grid-column: 1/2;
   grid-row: 2/4;
+  position: relative;
   float: left;
-  z-index: 1;
+  top: 0%;
 
 }
 
@@ -173,7 +174,7 @@
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/5;
-  float: left;
+  
 } 
 
 .blue5 {
