--- a/positionstyles.css
+++ b/positionstyles.css
@@ -144,34 +144,34 @@
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
-  display: grid;
+  /*display: grid;*/
   grid-column: 1fr, 1fr, 1fr ;
   grid-row:  80px, 80px, 80px, 80px, 80px; 
   
 }
 .red5 {
   width: 100%; 
-  height: 100%; 
+  height: 80px; 
   background-color: red; 
   grid-column: 1/4;
   grid-row: 1/2;
 } 
 .green5 { 
   width: 150px; 
-  height: 100%; 
+  height: 80px; 
   background-color: green; 
-  grid-column: 1/2;
+  /*grid-column: 1/2;
   grid-row: 2/4;
-  position: relative;
+  position: relative;*/
   float: left;
-  top: 0%;
-  left: 0;
+  /*top: 0%;
+  left: 0;*/
 
 }
 
 .yellow5 {
   width: 100%; 
-  height: 100%; 
+  height: 240px; 
   background-color: gold; 
   grid-column: 1/4;
   grid-row: 2/5;
@@ -181,7 +181,7 @@
 
 .blue5 {
   width: 100%; 
-  height:100%; 
+  height:80px; 
   background-color: blue; 
   grid-column: 1/4;
   grid-row: 5/6;
