--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -18,9 +18,9 @@ h1, h4 {
 body {
     background-color: #fcfbfb; 
 }
-header {
-    background-color: #6f7364;
 
+#hero-msg h4 {
+    color: white;
 }
 .msg {
     background-color: #6f7364;
@@ -28,6 +28,10 @@ header {
     color: white;
     line-height: 1.5em;
     padding: 15px 30px;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 msg a:link  {
     background-color:#c6b4a4;
@@ -40,10 +44,19 @@ footer p a {
 .home-grid  {
     text-align: center;
     margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat (10, 1fr);
+
 }
 .book, .join {
+    background-color: #c6b4a4;
     text-align: center;
-    padding: 15px 30px;
+    padding: 15px 30px; 
+}
+.msg .join{
+    background-color: #c6b4a4;
+    color: black;
+    text-decoration: none; 
     
 }
 div .button-box{
@@ -52,14 +65,10 @@ div .button-box{
 #hero-msg a{
     color: black;
 }
-.msg .join{
-    background-color: #c6b4a4;
-    color: black;
-    text-decoration: none; 
-    
-}
+
 .logo{
-    width: 80px;
+    width: 100px;
+   
 }
 #hero-img{
     width: 100%;
@@ -67,7 +76,11 @@ div .button-box{
 footer  {
     background-color: #6f7364;
     color: #c6b4a4;
-    margin-top: 200px;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 div .social a {
     text-align: left; 
@@ -89,15 +102,97 @@ div a{
     color: #f3decb;
     margin-top: 10px;
 }
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-column: 2/3;
 }   
-.card-img {
+
+camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-column: 2/3;
+}   
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-column: 2/3;
+}   
+.card-img  {
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img .mountains {
+    border: 10px solid #d9c2a3;
+    width: 100%;
 }
 main section img {
     box-sizing: border-box;
 }
+header {
+    background-color: #6f7364;
+    display: grid;
+    grid-template-columns: 150px, auto;
+} 
 #content{
     max-width: 1600px;
-}    
+    
+}  
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+} 
+nav {
+    display: flex;
+    justify-content: space-around;
+    
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: 1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg{
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-column: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+#background{
+    grid-column: 1/11;
+    grid-column: 4/9;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
