--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,10 +6,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #77BFA3   ;
-  --secondary-color: #98C9A3 ;
-  --accent1-color: #BFD8BD;
-  --accent2-color: #F9DF74;
+  --primary-color: #284b63   ;
+  --secondary-color: #3c6e71 ;
+  --accent1-color: #d9d9d9;
+  --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Lato";
