--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -4,13 +4,16 @@ body {
     font-family: Raleway, Arial, sans-serif;
     font-size: 22px;
     margin: 0;
-    padding: 0;
+    padding: 0; 
 }
 h2 {
     margin: 0;
 }
 #background {
     height: 725px;
+    color: pink;
+    
+
 }
 h1, h4 {
     text-align: center;
@@ -29,7 +32,7 @@ body {
     line-height: 1.5em;
     padding: 15px 30px;
     padding: 35px;
-    grid-column: 6/10;
+    grid-column: 6/9;
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
 }
@@ -177,18 +180,18 @@ nav {
 }
 .mountains {
     width: 100%;
-    grid-column: 2/7;
+    grid-column: 3/7;
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
 
-.msg{
+/*.msg{
     background-color: #6f7364;
     padding: 35px;
     grid-column: 6/10;
     grid-column: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
-}
+}*/
 #background{
     grid-column: 1/11;
     grid-column: 4/9;
