--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -11,9 +11,9 @@ h2 {
 }
 #background {
     height: 725px;
-    color: pink;
-    background-color: bisque;
-
+    background-color: #d9c2a3;
+    grid-column: 1/11;
+    grid-row: 4/12;
 }
 h1, h4 {
     text-align: center;
@@ -76,15 +76,7 @@ div .button-box{
 #hero-img{
     width: 100%;
 }
-footer  {
-    background-color: #6f7364;
-    color: #c6b4a4;
-    padding: 25px 50px;
-    margin-top: 200px; 
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
+
 div .social a {
     text-align: left; 
 }
@@ -135,6 +127,7 @@ div a{
 .card-img .mountains {
     border: 10px solid #d9c2a3;
     width: 100%;
+    
 }
 main section img {
     box-sizing: border-box;
@@ -143,15 +136,15 @@ header {
     background-color: #6f7364;
     display: grid;
     grid-template-columns: 150px, auto;
+    grid-column: 1/3;
+    grid-row: 1/2;
 } 
-/* --------*/
 #content{
     max-width: 1600px;
     justify-content: left;
     align-content: center;
     justify-items: center;
 }  
-/*/*/
 #logo_link {
     padding-top: 5px;
     justify-self: center;
@@ -160,12 +153,13 @@ header {
 nav {
     display: flex;
     justify-content: space-around;
-    
 }
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px; 
+    grid-column: 1/4;
+    grid-row: 2/4;
 }
 #hero-box {
     grid-column: 1/4;
@@ -184,18 +178,6 @@ nav {
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
-
-/*.msg{
-    background-color: #6f7364;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-column: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}*/
-#background{
-    grid-column: 1/11;
-    grid-column: 4/9;
-}
 .card-img {
     border: 10px solid #d9c2a3;
     transition: transform .5s;
@@ -205,3 +187,57 @@ nav {
     opacity: .6;
     transform: scale(1.1);
 }
+footer  {
+    background-color: #6f7364;
+    color: #c6b4a4;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    grid-column: 1/2;
+    grid-row: 13/14;
+}
+/*--  --*/
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
