--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -95,8 +95,12 @@ div a{
 .home-title{
     font-family: 'Lato', 'Bradley Hand', sans-serif;
     font-size: 2em;
+    /*--*/
     color: #f3decb;
     margin-top: 10px;
+
+    grid-column: 2/4;
+    grid-row: 1/2;
 }
 .rivers-card {
     margin: 100px 0;
@@ -163,14 +167,14 @@ nav {
 }
 #hero-box {
     grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: 1;
+    grid-row: 2/3;
+    /*z-index: 1;  */
 }
-
 #hero-msg {
     grid-column: 2/3;
-    grid-row: 1/2;
+    grid-row: 2/3;
     margin-top: 100px;
+    z-index: 1;
 }
 .mountains {
     width: 100%;
