--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -31,7 +31,7 @@ body {
     color: white;
     line-height: 1.5em;
     padding: 15px 30px;
-    padding: 35px;
+    /*padding: 35px;*/
     grid-column: 6/9;
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
@@ -55,6 +55,7 @@ footer p a {
     background-color: #c6b4a4;
     text-align: center;
     padding: 15px 30px; 
+
 }
 .msg .join{
     background-color: #c6b4a4;
@@ -69,26 +70,19 @@ div .button-box{
     color: black;
 }
 
-.logo{
-    width: 100px;
-   
-}
+
 #hero-img{
     width: 100%;
+    
 }
 
 div .social a {
     text-align: left; 
 }
-nav a{
-    color: white;
-    text-decoration: none;
-    padding: 35px; 
-    text-align: center;
-    z-index: 1;
-} 
+
 .icon{
     height: 80px;
+    padding-top: 10px;
 }
 div a{
     text-decoration: none;
@@ -150,25 +144,43 @@ header {
     align-content: center;
     justify-items: center;
 }  
+.logo{
+    width: 100px;
+    display: flex;
+}
 #logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
-} 
+    
+}
 nav {
     display: flex;
     justify-content: space-around;
 }
+nav a{
+    color: white;
+    text-decoration: none;
+    padding: 35px; 
+    text-align: center;
+    z-index: 1;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    
+} 
+
+ 
+
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px; 
+    margin-top: -200px; 
     grid-column: 1/4;
-    grid-row: 2/4;
+    grid-row: 1/4;
 }
 #hero-box {
     grid-column: 1/4;
-    grid-row: 2/3;
+    grid-row: 1/3;
     
 }
 #hero-msg {
