--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -52,7 +52,7 @@ footer p a {
 
 }
 .book, .join {
-    background-color: #c6b4a4;
+    background-color: #9d8a7a;
     text-align: center;
     padding: 15px 30px; 
 
