--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -91,7 +91,7 @@ div a{
     font-family: 'Lato', 'Bradley Hand', sans-serif;
     font-size: 2em;
     /*--*/
-    color: #f3decb;
+    color: #786756;
     margin-top: 10px;
 
     grid-column: 2/4;
