--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -13,7 +13,7 @@ h2 {
     height: 725px;
     background-color: #d9c2a3;
     grid-column: 1/11;
-    grid-row: 4/12;
+    grid-row: 4/11;
 }
 h1, h4 {
     text-align: center;
@@ -90,25 +90,21 @@ div a{
 .home-title{
     font-family: 'Lato', 'Bradley Hand', sans-serif;
     font-size: 2em;
-    /*--*/
     color: #786756;
     margin-top: 10px;
-
     grid-column: 2/4;
     grid-row: 1/2;
 }
 .rivers-card {
     margin: 100px 0;
     grid-column: 2/4;
-    grid-row: 2/3;
+    grid-row: 2/3; 
 }   
-
 .camping-card {
     margin: 100px 0;
     grid-column: 5/7;
     grid-row: 2/3;
 }   
-
 .rapids-card {
     margin: 100px 0;
     grid-column: 8/10;
@@ -118,6 +114,7 @@ div a{
     border: 10px solid #d9c2a3;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
+    /*border-radius: 30px;*/
 }
 .card-img:hover {
     opacity: .6;
@@ -140,19 +137,19 @@ header {
 } 
 #content{
     max-width: 1600px;
-    justify-content: left;
+    justify-content: center;
     align-content: center;
     justify-items: center;
 }  
 .logo{
     width: 100px;
-    display: flex;
+    display: grid;  
+    z-index: -2;
 }
 #logo_link {
     padding-top: 5px;
     justify-self: center;
-    align-self: center;
-    
+    align-self: center;  
 }
 nav {
     display: flex;
@@ -166,7 +163,6 @@ nav a{
     z-index: 1;
     grid-column: 2/3;
     grid-row: 1/2;
-    
 } 
 #hero {
     display: grid;
@@ -183,13 +179,13 @@ nav a{
 #hero-msg {
     grid-column: 2/3;
     grid-row: 2/3;
-    margin-top: 100px;
+    margin-top: -100px;
     z-index: 1;
 }
 .mountains {
     width: 100%;
-    grid-column: 3/7;
-    grid-row: 5/8;
+    grid-column: 1/5;
+    grid-row: 6/10;
     box-shadow: 5px 5px 10px #6f7364;
 }
 .card-img {
@@ -214,7 +210,7 @@ footer  {
 }
 /*--  --*/
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    #hero, .home-grid, {
         display: block;
         height: auto;
     }
@@ -255,5 +251,47 @@ footer  {
     }
 }
 /* --------    rivers.html    --------   */
-
-            
+.river-grid  {
+    text-align: center;
+    /*margin-top: 50px;*/
+    display: grid;
+    grid-template-columns: repeat (10, auto);
+    grid-template-rows: repeat (9, auto);
+}   
+.card-img1 {
+    box-shadow: 5px 5px 10px #6f7364;
+    padding: 15px;
+    border-radius: 25px;
+}
+.rivers-card1 {
+    margin: 80px 0;
+    grid-column: 2/4;
+    grid-row: 3/4;
+}
+.camping-card1 {
+    margin: 80px 0;
+    grid-column: 5/7;
+    grid-row: 3/4;
+}   
+.rapids-card1 {
+    margin: 80px 0;
+    grid-column: 8/10;
+    grid-row: 3/4;
+}
+.mountains1 {
+    width: 100%;
+    grid-column: 1/3;
+    grid-row: 6/10;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.msg1 {
+    background-color: white;
+    text-align: center;
+    color: #6f7364;
+    /*line-height: 1.5em;
+    padding: 15px 30px;
+    /*padding: 35px;*/
+    grid-column: 4/6;
+    grid-row: 6/10;
+    box-shadow: 5px 5px 10px #6f7364;
+}
