--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -278,6 +278,12 @@ footer  {
     grid-column: 8/10;
     grid-row: 3/4;
 }
+#background1 {
+    height: 725px;
+    background-color: #d9c2a3;
+    grid-column: 1/11;
+    grid-row: 4/11;
+}
 .mountains1 {
     width: 100%;
     grid-column: 1/3;
