--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -280,7 +280,7 @@ footer  {
 }
 #background1 {
     height: 725px;
-    background-color: #d9c2a3;
+    background-color: white;
     grid-column: 1/11;
     grid-row: 4/11;
 }
@@ -299,5 +299,5 @@ footer  {
     /*padding: 35px;*/
     grid-column: 4/6;
     grid-row: 6/10;
-    box-shadow: 5px 5px 10px #6f7364;
+    /*box-shadow: 5px 5px 10px #6f7364;*/
 }
