--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -21,7 +21,6 @@ h1, h4 {
 body {
     background-color: #fcfbfb; 
 }
-
 #hero-msg h4 {
     color: #d9c2a3;
 }
@@ -49,19 +48,16 @@ footer p a {
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat (10, 1fr);
-
 }
 .book, .join {
     background-color: #9d8a7a;
     text-align: center;
     padding: 15px 30px; 
-
 }
 .msg .join{
     background-color: #c6b4a4;
     color: black;
-    text-decoration: none; 
-    
+    text-decoration: none;     
 }
 div .button-box{
     text-align: center; 
@@ -69,17 +65,12 @@ div .button-box{
 #hero-msg a{
     color: black;
 }
-
-
 #hero-img{
-    width: 100%;
-    
+    width: 100%; 
 }
-
 div .social a {
     text-align: left; 
 }
-
 .icon{
     height: 80px;
     padding-top: 10px;
@@ -111,10 +102,10 @@ div a{
     grid-row: 2/3;
 }   
 .card-img  {
-    border: 10px solid #d9c2a3;
+    border: 5px solid #d9c2a3;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
-    /*border-radius: 30px;*/
+    border-radius: 30px;
 }
 .card-img:hover {
     opacity: .6;
@@ -249,14 +240,18 @@ footer  {
     footer {
         margin-top: 25px;
     }
-}
+} 
 /* --------    rivers.html    --------   */
 .river-grid  {
-    text-align: center;
-    /*margin-top: 50px;*/
+    /*text-align: center;
+    margin-top: 50px;
     display: grid;
     grid-template-columns: repeat (10, auto);
-    grid-template-rows: repeat (9, auto);
+    grid-template-rows: repeat (9, auto);*/
+    text-align: center;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat (10, 1fr);
 }   
 .card-img1 {
     box-shadow: 5px 5px 10px #6f7364;
