--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -47,7 +47,7 @@ footer p a {
     text-align: center;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .book, .join {
     background-color: #9d8a7a;
@@ -122,7 +122,7 @@ main section img {
 header {
     background-color: #6f7364;
     display: grid;
-    grid-template-columns: 150px, auto;
+    grid-template-columns: 150px auto;
     grid-column: 1/3;
     grid-row: 1/2;
 } 
@@ -251,7 +251,7 @@ footer  {
     text-align: center;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }   
 .card-img1 {
     box-shadow: 5px 5px 10px #6f7364;
