--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -6,6 +6,47 @@ body {
     margin: 0;
     padding: 0; 
 }
+header {
+    background-color: #6f7364;
+    display: grid;
+    grid-template-columns: 150px auto;
+    grid-column: 1/3;
+    grid-row: 1/2;
+} 
+#content{
+    max-width: 1600px;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+}  
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;  
+    
+}
+.logo{
+    width: 100px;
+    display: grid;  
+    /*z-index: -2;*/
+    grid-column: 1/2;
+    
+}
+nav a{
+    color: white;
+    text-decoration: none;
+    padding: 35px; 
+    text-align: center;
+    /*z-index: 1;*/
+    grid-column: 2/3;
+    
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+    grid-column: 3/4;
+}
+ 
 h2 {
     margin: 0;
 }
@@ -13,7 +54,7 @@ h2 {
     height: 725px;
     background-color: #d9c2a3;
     grid-column: 1/11;
-    grid-row: 4/11;
+    grid-row: 4/9;
 }
 h1, h4 {
     text-align: center;
@@ -30,8 +71,7 @@ body {
     color: white;
     line-height: 1.5em;
     padding: 15px 30px;
-    /*padding: 35px;*/
-    grid-column: 6/9;
+    grid-column: 6/10;
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
 }
@@ -102,10 +142,9 @@ div a{
     grid-row: 2/3;
 }   
 .card-img  {
-    border: 5px solid #d9c2a3;
+    border: 5px solid #d9c2a3;/*-----------------*/
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
-    border-radius: 30px;
 }
 .card-img:hover {
     opacity: .6;
@@ -119,42 +158,7 @@ div a{
 main section img {
     box-sizing: border-box;
 }
-header {
-    background-color: #6f7364;
-    display: grid;
-    grid-template-columns: 150px auto;
-    grid-column: 1/3;
-    grid-row: 1/2;
-} 
-#content{
-    max-width: 1600px;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-}  
-.logo{
-    width: 100px;
-    display: grid;  
-    z-index: -2;
-}
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;  
-}
-nav {
-    display: flex;
-    justify-content: space-around;
-}
-nav a{
-    color: white;
-    text-decoration: none;
-    padding: 35px; 
-    text-align: center;
-    z-index: 1;
-    grid-column: 2/3;
-    grid-row: 1/2;
-} 
+
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -165,6 +169,7 @@ nav a{
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
+    z-index: -1;
     
 }
 #hero-msg {
@@ -175,11 +180,11 @@ nav a{
 }
 .mountains {
     width: 100%;
-    grid-column: 1/5;
-    grid-row: 6/10;
+    grid-column: 2/7;
+    grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img {
+/*.card-img {
     border: 10px solid #d9c2a3;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
@@ -187,7 +192,7 @@ nav a{
 .card-img:hover {
     opacity: .6;
     transform: scale(1.1);
-}
+}*/
 footer  {
     background-color: #6f7364;
     color: #c6b4a4;
@@ -291,5 +296,6 @@ footer  {
     color: #6f7364;
     grid-column: 3/6;
     grid-row: 6/10;
+    padding: 15px 30px;
     
 }
