--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -24,13 +24,14 @@ header {
     justify-self: center;
     align-self: center;  
     
+    
 }
 .logo{
     width: 100px;
     display: grid;  
     /*z-index: -2;*/
     grid-column: 1/2;
-    
+    margin-top: -200px;
 }
 nav a{
     color: white;
@@ -162,9 +163,9 @@ main section img {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -200px; 
-    grid-column: 1/4;
-    grid-row: 1/4;
+    margin-top: -100px; 
+    /*grid-column: 1/4;
+    grid-row: 1/4;*/
 }
 #hero-box {
     grid-column: 1/4;
