--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -1,14 +1,116 @@
-. {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body {
-    background-color: white;
-    font-family: 'Lato', sans-serif;
+h3{
+    text-align: right;
+    padding-right: 10px;
+    color: #F9DF74;
+}
 
+a{
+    text-decoration: none;
+    color: white;
 }
 header {
-    padding: 5px 0;
-    text-align: right;
-    font-size: .9em;
+    display: flex;
+    min-height: 70px;
+    background-color: #284b63;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+        
+}
+
+.logo {
+    display:flex;
+    align-items: center;
+}
+.logo img {
+    height: 50px;
+    margin-right: 10px;  
+}
+nav a{
+    font-weight: 800;
+    padding-right: 10px;
+}
+.position a:hover{    
+    color: aquamarine;     
+}
+div .position a {
+    text-align: center; 
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows:  1fr 1fr  1fr;
+    margin-top: -1px; 
+    
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/4;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    
+    z-index: 1;
+}
+#hero-img{
+    width: 100%; 
+}
+.home-title{
+    font-family: 'Lato', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    color: white;
+    margin-top: 0px;
+    grid-column: 2/4;
+    grid-row: 1/2;
+}
+h1, h2 {
+    text-align: center;
+    color: white;
+    /*margin-top: -100px;*/
+}
+.book  {
+    background-color: #BFD8BD;
+    text-align: center;
+    padding: 15px 30px;
+    
+}
+div .button-box{
+    text-align: center;
+    margin-top: 50px; 
+}
+#hero-msg a{
+    color: white;
+}
+
+
+footer  {
+    background-color: #284b63;
+    color: white;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /*grid-column: 1/2;
+    grid-row: 1/2;*/
+}
+
+@media(max-width:700px) {
+    header{
+        flex-direction: column;
+    }
+    nav{
+        padding: 10px 0px;
+    }
+    h3{
+        padding: 10px 0px;
+    }
 }
