--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -3,12 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-h3{
+h5{
     text-align: right;
     padding-right: 10px;
-    color: #F9DF74;
+    color: #c8a415;
 }
-
 a{
     text-decoration: none;
     color: white;
@@ -19,8 +18,7 @@ header {
     background-color: #284b63;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-        
+    padding: 10px;      
 }
 
 .logo {
@@ -63,6 +61,9 @@ div .position a {
 #hero-img{
     width: 100%; 
 }
+#hero-msg a{
+    color: white;
+}
 .home-title{
     font-family: 'Lato', 'Bradley Hand', sans-serif;
     font-size: 2em;
@@ -71,10 +72,10 @@ div .position a {
     grid-column: 2/4;
     grid-row: 1/2;
 }
-h1, h2 {
+h1, h4 {
     text-align: center;
     color: white;
-    /*margin-top: -100px;*/
+    
 }
 .book  {
     background-color: #BFD8BD;
@@ -86,8 +87,16 @@ div .button-box{
     text-align: center;
     margin-top: 50px; 
 }
-#hero-msg a{
+
+.msg {
+    background-color: #6f7364;
+    text-align: center;
     color: white;
+    line-height: 1.5em;
+    padding: 15px 30px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 
@@ -110,7 +119,7 @@ footer  {
     nav{
         padding: 10px 0px;
     }
-    h3{
+    h5{
         padding: 10px 0px;
     }
 }
