--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -119,6 +119,13 @@ footer  {
     nav{
         padding: 10px 0px;
     }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
     h5{
         padding: 10px 0px;
     }
