--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -89,18 +89,62 @@ div .button-box{
     margin-top: 50px; 
 }
 
-/*.msg {
-    background-color: #6f7364;
+#middle {
     text-align: center;
-    color: white;
-    line-height: 1.5em;
-    padding: 15px 30px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat (9 1fr);
+    grid-template-rows:  repeat (6 1fr);
+    margin-top: -5px; 
+    gap: 10px;
+}
+.img{
+    width: 300px;
+    height: 200px;    
+}
+/*.card-img {
+    width: 80%;
 }*/
-
-
+.passport {
+    margin: 80px 0;
+    grid-column: 2/3;
+    grid-row: 2/4;
+}
+.tickets {
+    margin: 80px 0;
+    grid-column: 4/5;
+    grid-row: 2/4;
+}
+.cusco {
+    margin: 80px 0;
+    grid-column: 6/7;
+    grid-row: 2/4;
+}
+.kuelap {
+    margin: 80px 0;
+    grid-column: 8/9;
+    grid-row: 2/4;
+}
+.Internationals1 {
+    margin: 80px 0;
+    grid-column: 2/3;
+    grid-row: 5/7;
+}
+.Internationals2 {
+    margin: 80px 0;
+    grid-column: 4/5;
+    grid-row: 5/7;
+}
+.Internationals3 {
+    margin: 80px 0;
+    grid-column: 6/7;
+    grid-row: 5/7;
+}
+.Internationals4 {
+    margin: 80px 0;
+    grid-column: 8/9;
+    grid-row: 5/7;
+}
 footer  {
     background-color: #284b63;
     color: white;
@@ -109,12 +153,10 @@ footer  {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /*grid-column: 1/2;
-    grid-row: 1/2;*/
 }
 
 @media(max-width:700px) {
-    header{
+    header, #middle{
         flex-direction: column;
     }
     nav{
@@ -139,7 +181,13 @@ footer  {
     #hero-msg h4 {
         display: none;
     }
-
+    .passport, .tickets, .cusco, .kuelap, .Internationals1, .Internationals2, .Internationals3, .Internationals4  {
+        margin: 50px auto;
+        width: 60%;
+    }
+    img{
+        flex-direction: column;
+    }
     footer {
         margin-top: 25px;
     }
