--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -93,8 +93,8 @@ div .button-box{
     text-align: center;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: repeat (9 1fr);
-    grid-template-rows:  repeat (6 1fr);
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr,  ;
+    grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, ;
     margin-top: -70px; 
     gap: 10px;
 }
@@ -102,9 +102,7 @@ div .button-box{
     width: 300px;
     height: 200px;    
 }
-/*.card-img {
-    width: 80%;
-}*/
+
 .passport {
     margin: 80px 0;
     grid-column: 2/3;
