--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -7,6 +7,7 @@ h5{
     text-align: right;
     padding-right: 10px;
     color: #c8a415;
+    font-size: 1.2em;
 }
 a{
     text-decoration: none;
@@ -96,10 +97,11 @@ div .button-box{
     grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
     grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
     margin-top: -70px; 
-    gap: 10px;
+    grid-gap: 10px;
+    padding: 0 20px;
 }
 .img{
-    width: 300px;
+    width: 250px;
     height: 200px;    
 }
 
@@ -154,7 +156,8 @@ footer  {
 }
 
 @media(max-width:700px) {
-    header, #middle, {
+    header {
+        width: 100%;
         flex-direction: column;
     }
     nav{
@@ -180,11 +183,14 @@ footer  {
         display: none;
     }
     #middle{
+        width: 100%;
         flex-direction: column;
+        display: block;
     }
     .passport, .tickets, .cusco, .kuelap, .Internationals1, .Internationals2,             .Internationals3, .Internationals4  {
         margin: 50px auto;
         width: 60%;
+        grid-template-columns: repeat(1, 1fr);
     }
     img{
         flex-direction: column;
