--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -98,7 +98,7 @@ div .button-box{
     grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
     margin-top: -70px; 
     grid-gap: 10px;
-    padding: 0 20px;
+    padding: 0 20px 10px;
 }
 .img{
     width: 250px;
