--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -175,7 +175,7 @@ p {
     margin-top: -50px;    
 }
 footer  {
-    background-color: #BFD8BD;
+    background-color: #98C9A3;
     color: white;
     padding: 25px 50px;
     margin-top: -60px; 
