--- a/aboutme/personalsite/style/carrusel.css
+++ b/aboutme/personalsite/style/carrusel.css
@@ -1,17 +1,22 @@
-* {
+/** {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-<style>
-  * {box-sizing: border-box}
-    body {font-family: Verdana, sans-serif; margin:0}
+}*/
+/*<style>*/
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+    body {font-family: 'Lato', 'Bradley Hand', sans-serif; margin:0}
     .mySlides {display: none}
     img {vertical-align: middle;}
     
+    
   /* Slideshow container */
   .slideshow-container {
-    max-width: 1000px;
+    max-width: 100%;
     position: relative;
     margin: auto;
   }
@@ -94,4 +99,4 @@
     @media only screen and (max-width: 300px) {
       .prev, .next,.text {font-size: 11px}
     }
-</style>
+/*</style>*/
