--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: 'Lato', 'Bradley Hand', sans-serif;
+}
 h5 h2{
     text-align: right;
     padding-right: 10px;
@@ -39,6 +42,12 @@ nav a{
 div .position a {
     text-align: center; 
 }
+.slideshow-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:  1fr;
+}
+
 #hero {
     display: grid;
     grid-template-columns: 1fr 7fr 1fr;
@@ -63,8 +72,8 @@ div .position a {
     color: white;
     font-size: 1em;
 }
+
 .home-title{
-    font-family: 'Lato', 'Bradley Hand', sans-serif;
     font-size: 4em;
     color: #284b63;
     margin-top: 0px;
@@ -96,7 +105,7 @@ div .button-box{
     padding: 0 20px 10px 10px;
 }
 .img{
-    width: 250px;
+    width: 300px;
     height: 200px;    
     border-radius: 0.5em;
 }
@@ -108,42 +117,69 @@ div .button-box{
     grid-column: 1/2;
     grid-row: 1/3;
 }
+.passport a {
+    color: #98C9A3;
+}
 .tickets {
     margin: 100px 0;
     grid-column: 3/4;
     grid-row: 1/3;
+}
+.tickets a {
+    color: #98C9A3;
 }
 .cusco {
     margin: 100px 0;
     grid-column: 5/6;
     grid-row: 1/3;
 }
+.cusco a {
+    color: #98C9A3;
+}
 .kuelap {
     margin: 100px 0;
     grid-column: 7/8;
     grid-row: 1/3;
 }
+.kuelap a {
+    color: #98C9A3;
+}
 .Internationals1 {
     margin: 100px 0;
     grid-column: 1/2;
     grid-row: 3/5;
+    margin-top: -50px;
+}
+.Internationals1 a {
+    color: #98C9A3;
 }
 .Internationals2 {
     margin: 100px 0;
     grid-column: 3/4;
     grid-row: 3/5;
+    margin-top: -50px;
+}
+.Internationals2 a {
+    color: #98C9A3;
 }
 .Internationals3 {
     margin: 100px 0;
     grid-column: 5/6;
     grid-row: 3/5;
+    margin-top: -50px;
+}
+.Internationals3 a {
+    color: #98C9A3;
 }
 .Internationals4 {
     margin: 100px 0;
     grid-column: 7/8;
     grid-row: 3/5;
+    margin-top: -50px;
 }
-
+.Internationals4 a {
+    color: #98C9A3;
+}
 .local {
     margin: 100px 0;
     grid-column: 1/5;
