--- a/aboutme/personalsite/style/carrusel.css
+++ b/aboutme/personalsite/style/carrusel.css
@@ -12,7 +12,7 @@
     
   /* Slideshow container */
   .slideshow-container {
-    max-width: 100%;
+    /*max-*/width: 100%;
     position: relative;
     margin: auto;
   }
